# ghost

./: .gitignore  docker-compose.yaml  package-lock.json
backend/: Cargo.toml  Dockerfile  docker-compose.yaml  docker-compose.yml
backend/migrations/: 20260126142725_create_initial_tables.down.sql  20260126142725_create_initial_tables.up.sql
backend/src/: lib.rs  main.rs
backend/src/application/services/: account_items.rs  auth.rs  mod.rs  pl_entries.rs  plan_nodes.rs  scenarios.rs  services.rs
backend/src/domain/: account_items.rs  history.rs  mod.rs  model.rs  models.rs  pl_entries.rs  plan_nodes.rs  scenarios.rs  services.rs  user.rs
backend/src/infrastructure/persistence/: account_item.rs  history.rs  mod.rs  pl_entries.rs  plan_nodes.rs  scenarios.rs  services.rs  user.rs
backend/src/presentation/: dtos.rs  extractors.rs  mod.rs
backend/src/presentation/handlers/: account_items.rs  auth.rs  mod.rs  pl_entries.rs  plan_nodes.rs  scenarios.rs  services.rs  users.rs
backend/src/utils/: jwt.rs  password.rs
frontend/: .prettierrc  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/features/auth/components/: LoginForm.tsx
frontend/src/features/nodes/api/: usePlanNodes.ts
frontend/src/features/nodes/components/: NodeDetailPanel.tsx  NodeIcon.tsx  NodeList.tsx  PlanNodeExplorer.tsx  PlanNodeFormDialog.tsx
frontend/src/features/nodes/utils/: tree.ts
frontend/src/features/scenarios/api/: useScenarios.ts
frontend/src/features/scenarios/components/: ScenarioFormDialog.tsx  ScenarioList.tsx  ScenarioRolloverDialog.tsx
frontend/src/features/services/api/: ServiceFormDialog.tsx  useServices.ts
frontend/src/features/services/components/: ServiceList.tsx
frontend/src/lib/api/: api.ts
frontend/src/pages/auth/: LoginPage.tsx
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/nodes/: NodesPage.tsx
frontend/src/pages/scenarios/: ScenariosPage.tsx
frontend/src/pages/services/: ServicesPage.tsx
frontend/src/pages/settings/: ScenarioSettingPage.tsx
frontend/src/types/: index.ts
