[package]
name = "ghost_api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "migrate", "rust_decimal"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Utilities
uuid = { version = "1.20.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.40.0", features = ["serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
async-trait = "0.1.89"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Error Handling
thiserror = "2.0.18"
anyhow = "1.0.100"

# Autorization
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.12.2"
